add :load and :exit