@@ -3,9 +3,8 @@ package org.devore;
 import org.devore.lang.Env;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 public class Main {
     public static void main(String[] args) throws IOException {
@@ -13,9 +12,10 @@ public class Main {
             Repl.repl(Env.newEnv());
         else if ("--version".equals(args[0]) || "-v".equals(args[0]))
             System.out.println(Devore.VERSION_MESSAGE);
-        else
-            Devore.call(Env.newEnv(), new String(Files.readAllBytes(
-                    Paths.get(System.getProperty("user.dir")).resolve(Paths.get(args[0])).normalize()),
-                    StandardCharsets.UTF_8));
+        else {
+            Env env = Env.newEnv();
+            for (String arg : args)
+                Devore.call(env, Files.readString(Path.of(arg)));
+        }
     }
 }
